--- a/tmux.conf
+++ b/tmux.conf
@@ -1,25 +1,29 @@
-# set shell
+#######################################################################
+# To reload this file while in an active session, press
+# C-b :
+# this will bring up a command prompt where you type
+# :source-file ~/.tmux.conf
+
+# set shell as zsh
 # set -g default-shell /bin/zsh
 
+# Use vim keys
 set -g status-keys vi
 setw -g mode-keys vi
 
-bind-key v split-window -h
-bind-key s split-window -v
-
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
-
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
-
-# Vim style pane selection
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# split panes using | and -
+bind | split-window -h
+bind v split-window -v
+unbind '"'
+unbind %
+
+# Resize panes quickly
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
