--- a/tmux.conf
+++ b/tmux.conf
@@ -17,8 +17,8 @@ bind k select-pane -U
 bind l select-pane -R
 
 # split panes using | and -
-bind | split-window -h
-bind v split-window -v
+bind v split-window -h
+bind - split-window -v
 unbind '"'
 unbind %
 
