zero delay ctr-[

--- a/current/tmux.conf
+++ b/current/tmux.conf
@@ -7,6 +7,9 @@
 # set shell as zsh
 # set -g default-shell /bin/zsh
 
+# Zero delay Ctr-[
+set -s escape-time 0
+
 # Use vim keys
 set -g status-keys vi
 setw -g mode-keys vi
