[UPDATES-Q2] simplifying zsh

--- a/current/tmux.conf
+++ b/current/tmux.conf
@@ -4,20 +4,20 @@
 # this will bring up a command prompt where you type
 # :source-file ~/.tmux.conf
 
-# set shell as zsh
-# set -g default-shell /bin/zsh
-
 # Zero delay Ctr-[
 set -s escape-time 0
+
+# Git info
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
 
 # Use vim keys
 set -g status-keys vi
 setw -g mode-keys vi
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L\; refresh-client -S
+bind -r j select-pane -D\; refresh-client -S
+bind -r k select-pane -U\; refresh-client -S
+bind -r l select-pane -R\; refresh-client -S
 
 # split panes using | and -
 bind v split-window -h
